Ligando uma interface definida em FXML com código Java

--- a/tw-agenda-fx/.classpath
+++ b/tw-agenda-fx/.classpath
@@ -52,5 +52,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry combineaccessrules="false" kind="src" path="/tw-agenda-entidades"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/tw-agenda-repositorios"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
