--- a/tw-agenda-fx/.classpath
+++ b/tw-agenda-fx/.classpath
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/tw-agenda-entidades"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/tw-agenda-repositorios"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-17">
 		<attributes>
 			<attribute name="module" value="true"/>
@@ -51,7 +53,6 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry combineaccessrules="false" kind="src" path="/tw-agenda-entidades"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/tw-agenda-repositorios"/>
+	<classpathentry kind="lib" path="C:/Users/johab/javafx/tw-jdbc/libs/mysql-connector-java-8.0.30.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
