--- a/tw_agenda_fx/resources/application.properties
+++ b/tw_agenda_fx/resources/application.properties
@@ -1,3 +1,3 @@
-urlConexao=jdbc:mysql://localhost:3306/tw-jdbc?useSSL=false
+urlConexao=jdbc:mysql://localhost:3306/twagenda?useSSL=false
 usuarioConexao=twclientes_user
 senhaConexao=twclientes_pwd
