--- a/tw_agenda_servlets/src/main/webapp/WEB-INF/web.xml
+++ b/tw_agenda_servlets/src/main/webapp/WEB-INF/web.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="https://jakarta.ee/xml/ns/jakartaee" xmlns:web="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd" id="WebApp_ID" version="5.0">
   <display-name>tw_agenda_servlets</display-name>
+  
   <servlet>
   	<servlet-name>HelloServlet</servlet-name>
   	<servlet-class>br.com.johabfreitas.agenda.servlets.HelloServlet</servlet-class>
@@ -9,6 +10,17 @@
   	<servlet-name>HelloServlet</servlet-name>
   	<url-pattern>/hello</url-pattern>
   </servlet-mapping>
+  
+  <!-- ** Servlet para que o usuário digite seu nome -->
+  <servlet>
+  	<servlet-name>EscrevaSeuNomeServlet</servlet-name>
+  	<servlet-class>br.com.johabfreitas.agenda.servlets.EscrevaSeuNomeServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>EscrevaSeuNomeServlet</servlet-name>
+  	<url-pattern>/escrevaSeuNome</url-pattern>
+  </servlet-mapping>
+  
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.jsp</welcome-file>
