métodos doGet e doPost

--- a/.gitignore
+++ b/.gitignore
@@ -92,5 +92,5 @@ local.properties
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
-
+Servers*
 # End of https://www.toptal.com/developers/gitignore/api/java,eclipse
