--- a/tw_agenda_servlets/src/main/webapp/WEB-INF/web.xml
+++ b/tw_agenda_servlets/src/main/webapp/WEB-INF/web.xml
@@ -21,6 +21,26 @@
   	<url-pattern>/escrevaSeuNome</url-pattern>
   </servlet-mapping>
   
+  <!-- ** Servlet para mostrar o nome do usuário -->
+  <servlet>
+  	<servlet-name>ReceberMensagemServlet</servlet-name>
+  	<servlet-class>br.com.johabfreitas.agenda.servlets.ReceberMensagemServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>ReceberMensagemServlet</servlet-name>
+  	<url-pattern>/receberMensagem</url-pattern>
+  </servlet-mapping>
+  
+  <!-- ** Servlet de mensagem -->
+  <servlet>
+  	<servlet-name>MensagemServlet</servlet-name>
+  	<servlet-class>br.com.johabfreitas.agenda.servlets.MensagemServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>MensagemServlet</servlet-name>
+  	<url-pattern>/mensagem</url-pattern>
+  </servlet-mapping>
+  
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.jsp</welcome-file>
