--- a/tw_agenda_servlets/.classpath
+++ b/tw_agenda_servlets/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src/main/java"/>
+	<classpathentry kind="src" path="resources"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-17">
 		<attributes>
 			<attribute name="module" value="true"/>
@@ -18,5 +19,7 @@
 			<attribute name="owner.project.facets" value="jst.web"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry combineaccessrules="false" kind="src" path="/tw_agenda_entidades"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/tw_agenda_repositorios"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
